# chungtasethanhcong

./: .env.example  .gitignore  100_percent_completion_test_report.json  COMPREHENSIVE_README.md  CURRENT_STATUS_REPORT.md  DEPLOYMENT_GUIDE.md  Dockerfile  FINAL_PROJECT_REPORT.md  INTEGRATION_PLAN.md  PHASE1_COMPLETION_REPORT.md  PHASE2_COMPLETION_REPORT.md  PHASE3_COMPLETION_REPORT.md  PHASE4_COMPLETION_REPORT.md  PRODUCTION_DEPLOYMENT_REPORT.md  PROJECT_STATUS_REPORT.md  PROJECT_SUMMARY.md  README.md  README_100_PERCENT_COMPLETE.md  README_FINAL.md  SUPABASE_TELEGRAM_INTEGRATION_REPORT.md  alembic.ini  cli.py  comprehensive_api_test_report.json  comprehensive_project_check.json  config.yaml  deploy_production.py  deploy_simple.py  deployment_report.json  desktop_app.py  docker-compose.yml  final_comprehensive_test_report.json  final_test_report.json  keep_alive.py  main.py  main_fixed.py  mobile_app.py  optimized_performance_test_report.json  process_config.json  process_manager.py  production_test_results.json  (+29 more)
.github/workflows/: ci.yml
alembic/: env.py
configs/: config.example.yaml  supabase.yaml  telegram.yaml
deployment/kubernetes/: api-deployment.yaml  configmap.yaml  ingress.yaml  namespace.yaml
deployment/terraform/: main.tf  variables.tf
docs/: COMMUNITY_GUIDE.md  TOOLS_API_REFERENCE.md  TUTORIALS.md  USER_GUIDE.md  architecture.md  quickstart.md
ecosystem/plugins/: __init__.py  base_plugin.py
examples/: __init__.py  browser_agent_example.py  meta_agent_example.py  orchestra_agent_example.py  simple_agent_example.py  tools_example.py
monitoring/: prometheus.yml
nginx/: nginx.conf
scripts/: init-db.sql  setup_supabase.py  start.sh  start_telegram_bot.py
src/: __init__.py
src/agents/: __init__.py  browser_agent.py  dynamic_agent.py  gemini_agent_factory.py  meta_agent.py  orchestra_agent.py  simple_agent.py
src/ai/: gemini_agent.py  gemini_client.py  unified_gemini_agent.py
src/api/: __init__.py  advanced_endpoints.py  docs_generator.py  enhanced_endpoints.py  fixed_endpoints.py  gemini_chat.py  gemini_config.py  models.py  modules.py  routes.py  server.py  simple_endpoints.py  telegram_webhook.py  unified_gemini_api.py
src/core/: __init__.py  advanced_config.py  communication.py  config.py  database.py  environment.py  memory.py  models.py  optimization.py  orchestration.py  state.py  state_manager.py  tool_registry.py  unified_agent.py
src/frontend/components/: GeminiConfigInterface.tsx
src/frontend/styles/: production-dashboard.css
src/integrations/: __init__.py  openmanus.py  telegram_bot.py  youtu.py
src/integrations/openmanus/: __init__.py
src/integrations/supabase/: __init__.py  client.py  migrations.py  models.py  telegram_bot.py
src/integrations/youtu/: __init__.py
src/security/: __init__.py  authentication.py  rate_limiting.py
src/tools/: __init__.py  analysis_tools.py  automation_tools.py  base_tool.py  calendar_tools.py  communication_tools.py  data_tools.py  email_tools.py  file_tools.py  gemini_tools.py  image_tools.py  pdf_tools.py  search_tools.py  system_tools.py  web_tools.py
src/utils/: __init__.py  exceptions.py  logger.py
static/components/: GeminiChatInterface.tsx  ProductionDashboard.tsx  UnifiedGeminiDashboard.tsx
static/styles/: gemini-interface.css
tests/: __init__.py  test_agents.py  test_tools.py
tests/e2e/: __init__.py  test_agent_workflows.py  test_tool_workflows.py  test_workflow_orchestration.py
tests/performance/: __init__.py  benchmark.py  test_load_performance.py
